# AI-Native-SDLC

./: .gitignore  AGENTS.md  CONTEXT.md  README.md
references/agent-skills/computer-use-best-practices/: .env.example  .gitignore  config.example.toml  constants.py  pyproject.toml  requirements.txt
references/agent-skills/computer-use-best-practices/.claude/skills/first-run/: SKILL.md
references/agent-skills/computer-use-best-practices/computer_use/: __main__.py  formatters.py  image.py  loop.py  preflight.py  render.py  trajectory.py
references/agent-skills/computer-use-best-practices/computer_use/tools/: __init__.py  base.py  batch.py  browser.py  computer.py  editor.py  open_app.py  result.py  shell.py
references/agent-skills/computer-use-best-practices/dev_ui/assets/: anthropic.css  streamlit_theme.toml
references/agent-skills/computer-use-best-practices/dev_ui/localization_demo/: server.py
references/agent-skills/computer-use-best-practices/dev_ui/localization_demo/static/: index.html
references/agent-skills/computer-use-best-practices/dev_ui/tool_panel/: server.py
references/agent-skills/computer-use-best-practices/dev_ui/trajectory_viewer/: app.py
references/agent-skills/computer-use-best-practices/sandbox/: default.sb
references/agent-skills/computer-use-best-practices/tests/: test_advisor.py  test_base.py  test_batch.py  test_build_tools.py  test_compaction.py  test_computer.py  test_config.py  test_constants.py  test_editor.py  test_formatters.py  test_image.py  test_loop.py  test_preflight.py  test_result.py  test_shell.py  test_zoom.py
(+696 files in other folders)
